--- a/index.html
+++ b/index.html
@@ -1,1 +1,101 @@
 
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>KymiDrumsProd | Michael - Drummer & Producer</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Inter:wght@400;900&display=swap');
+        h1, h2, h3 { font-family: 'Oswald', sans-serif; }
+        body { background-color: #000; color: white; font-family: 'Inter', sans-serif; margin: 0; }
+        .text-neon { text-shadow: 0 0 10px rgba(220,38,38,0.5); }
+    </style>
+</head>
+<body>
+
+    <header class="min-h-screen w-full flex flex-col items-center justify-center text-center relative py-10 px-4">
+        <div class="relative z-10 w-full max-w-[320px] md:max-w-[480px] mb-12">
+            <img src="kymi.png" alt="KymiDrumsProd Logo" class="w-full h-auto drop-shadow-[0_0_35px_rgba(255,255,255,0.2)]">
+        </div>
+
+        <div class="relative z-10">
+            <h1 class="text-7xl md:text-9xl uppercase italic font-black tracking-tighter mb-4 text-white italic">MICHAEL</h1>
+            <p class="text-xl md:text-2xl tracking-[0.6em] font-light text-red-600 uppercase mb-12">Drummer • Producer • Session Musician</p>
+            
+            <div class="flex flex-col md:flex-row gap-6 justify-center items-center">
+                <a href="mailto:rockslaves.coverband@gmail.com" class="w-full md:w-80 bg-red-600 hover:bg-red-700 text-white font-bold py-5 px-8 rounded-full transition duration-300 shadow-2xl uppercase tracking-widest text-sm">
+                    Contact / Session Work
+                </a>
+            </div>
+        </div>
+
+        <div class="absolute inset-0 z-0">
+            <div class="absolute inset-0 bg-gradient-to-b from-black via-black/40 to-black z-10"></div>
+            <div class="w-full h-full bg-[url('studio-bg.jpg')] bg-cover bg-center opacity-30 blur-sm"></div>
+        </div>
+    </header>
+
+    <section class="py-20 bg-zinc-900/50 border-y border-white/5">
+        <div class="max-w-4xl mx-auto px-6 text-center">
+            <p class="text-zinc-500 uppercase tracking-widest text-xs font-bold mb-8 italic">Currently on tour with</p>
+            <div class="flex flex-col md:flex-row items-center justify-center gap-10">
+                <img src="logo.png" alt="Rock Slaves Logo" class="h-20 md:h-28 opacity-80 hover:opacity-100 transition">
+                <div class="text-left">
+                    <h3 class="text-2xl font-bold text-white uppercase italic">Rock Slaves - CF Power Trio</h3>
+                    <p class="text-zinc-400 text-sm italic">Full Power Trio - Luxembourg & France</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="py-24 bg-black">
+        <div class="max-w-6xl mx-auto px-6">
+            <h2 class="text-4xl font-black uppercase italic mb-12 text-center tracking-tight">Drum Cam <span class="text-red-600">Performance</span></h2>
+            <div class="aspect-video bg-zinc-900 rounded-3xl overflow-hidden border border-zinc-800 shadow-[0_0_50px_rgba(220,38,38,0.1)]">
+                <iframe class="w-full h-full" src="https://www.youtube.com/embed/nbKIGQUMY8U" frameborder="0" allowfullscreen></iframe>
+            </div>
+        </div>
+    </section>
+
+    <section class="py-24 bg-zinc-900">
+        <div class="max-w-6xl mx-auto px-6">
+            <h2 class="text-4xl font-black uppercase italic mb-16 text-center tracking-tight">The <span class="text-red-600">Gear</span></h2>
+            
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+                <div class="p-8 border border-white/10 rounded-3xl bg-black/40">
+                    <h3 class="text-red-600 text-xl font-bold uppercase mb-4 tracking-widest">Drums</h3>
+                    <ul class="text-zinc-400 text-sm space-y-2 uppercase font-medium">
+                        <li>• Custom Kit</li>
+                        <li>• Snare 14" x 6.5"</li>
+                        <li>• Kick 22"</li>
+                    </ul>
+                </div>
+                <div class="p-8 border border-white/10 rounded-3xl bg-black/40">
+                    <h3 class="text-red-600 text-xl font-bold uppercase mb-4 tracking-widest">Cymbals</h3>
+                    <ul class="text-zinc-400 text-sm space-y-2 uppercase font-medium">
+                        <li>• Hi-Hat 14"</li>
+                        <li>• Crash 16" & 18"</li>
+                        <li>• Ride 20"</li>
+                    </ul>
+                </div>
+                <div class="p-8 border border-white/10 rounded-3xl bg-black/40">
+                    <h3 class="text-red-600 text-xl font-bold uppercase mb-4 tracking-widest">Hardware / Tech</h3>
+                    <ul class="text-zinc-400 text-sm space-y-2 uppercase font-medium">
+                        <li>• Double Pedal</li>
+                        <li>• In-Ear Monitoring</li>
+                        <li>• Recording Setup</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="py-20 text-center bg-black border-t border-zinc-900">
+        <img src="kymi.png" class="h-20 mx-auto opacity-40 mb-8" alt="Kymi Logo">
+        <p class="text-zinc-600 text-[10px] uppercase tracking-[0.6em]">© 2026 KYMIDRUMSPROD | MICHAEL - LUXEMBOURG</p>
+    </footer>
+
+</body>
+</html>
