--- a/index.html
+++ b/index.html
@@ -39,48 +39,4 @@
         <div class="max-w-6xl mx-auto px-6 text-center">
             <h2 class="text-4xl font-black uppercase italic mb-12 tracking-tight">Latest <span class="text-red-600">Drum Cam</span></h2>
             <div class="max-w-4xl mx-auto aspect-video bg-zinc-900 rounded-3xl overflow-hidden border border-red-600/30 shadow-[0_0_60px_rgba(220,38,38,0.15)]">
-                <iframe class="w-full h-full" src="https://www.youtube.com/embed/ZzJjxT-vb3Q" title="Kymi Drummer Live" frameborder="0" allowfullscreen></iframe>
-            </div>
-        </div>
-    </section>
-
-    <section class="py-24 bg-zinc-900">
-        <div class="max-w-6xl mx-auto px-6">
-            <h2 class="text-5xl font-black uppercase italic mb-16 text-center tracking-tight">The <span class="text-red-600">Gear</span></h2>
-            
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-10">
-                <div class="p-10 border border-white/5 rounded-3xl bg-black/40 hover:border-red-600/30 transition duration-500">
-                    <h3 class="text-red-600 text-2xl font-bold uppercase mb-6 tracking-widest">Drum Kit</h3>
-                    <p class="text-white font-black text-xl mb-4 uppercase">Mapex Mars Pro</p>
-                    <ul class="text-zinc-400 text-sm space-y-3 uppercase font-medium tracking-wide">
-                        <li>• Snare 14"</li>
-                        <li>• Complete Tom Set</li>
-                        <li>• Double Bass Pedal Setup</li>
-                    </ul>
-                </div>
-
-                <div class="p-10 border border-white/5 rounded-3xl bg-black/40 hover:border-red-600/30 transition duration-500">
-                    <h3 class="text-red-600 text-2xl font-bold uppercase mb-6 tracking-widest">Cymbals</h3>
-                    <ul class="text-zinc-400 text-sm space-y-3 uppercase font-medium tracking-wide">
-                        <li>• Hi-Hat 14" <span class="text-white">Sabian AA Rock</span></li>
-                        <li>• 2X Crash 16" <span class="text-white">Zildjian A Custom</span></li>
-                        <li>• Ride 22" <span class="text-white">Sabian AA</span></li>
-                        <li>• China 18" <span class="text-white">Sabian AA</span></li>
-                        <li>• Splash 12" <span class="text-white">Zildjian A Custom</span></li>
-                        <li>• Splash 10" <span class="text-white">Sabian AA</span></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <footer class="py-24 text-center bg-black border-t border-zinc-900">
-        <img src="kymi.png" class="h-24 mx-auto opacity-50 mb-8" alt="Kymi Logo">
-        <div class="space-y-2">
-            <p class="text-zinc-500 text-[10px] uppercase tracking-[0.6em] font-bold italic">© 2026 KYMIDRUMSPROD | KYMI DRUMMER</p>
-            <p class="text-zinc-700 text-[8px] uppercase tracking-[0.4em]">Session Work : liquidten8072403@gmail.com</p>
-        </div>
-    </footer>
-
-</body>
-</html>
+                <iframe class
