--- a/index.html
+++ b/index.html
@@ -40,10 +40,15 @@
         <div class="max-w-4xl mx-auto px-6 text-center">
             <p class="text-zinc-500 uppercase tracking-widest text-[10px] font-bold mb-8 italic">Currently Drummer for</p>
             <div class="flex flex-col md:flex-row items-center justify-center gap-10">
-                <img src="logo.png" alt="Rock Slaves Logo" class="h-24 md:h-32 opacity-90 hover:opacity-100 transition duration-300">
+                <div class="flex flex-col items-center gap-4">
+                    <img src="logo.png" alt="Rock Slaves Logo" class="h-24 md:h-32 opacity-90 hover:opacity-100 transition duration-300">
+                    <a href="https://mmamsn-bit.github.io/rock-slaves-site/#video" target="_blank" class="text-[10px] bg-white/10 hover:bg-white/20 text-white py-2 px-4 rounded-full uppercase tracking-widest transition border border-white/20">
+                        Voir les vidéos du groupe
+                    </a>
+                </div>
                 <div class="text-left">
-                    <h3 class="text-3xl font-bold text-white uppercase italic tracking-wider">Rock Slaves - CF Power Trio</h3>
-                    <p class="text-zinc-500 text-sm italic uppercase tracking-widest font-light">Full Power Rock Trio Band</p>
+                    <h3 class="text-3xl font-bold text-white uppercase italic tracking-wider leading-tight">Rock Slaves<br><span class="text-red-600">- CF Power Trio -</span></h3>
+                    <p class="text-zinc-500 text-sm italic uppercase tracking-widest font-light mt-2">Full Power Rock Trio Band</p>
                 </div>
             </div>
         </div>
@@ -53,7 +58,7 @@
         <div class="max-w-6xl mx-auto px-6 text-center">
             <h2 class="text-4xl font-black uppercase italic mb-12 tracking-tight text-neon">Latest <span class="text-red-600">Drum Cam</span></h2>
             <div class="max-w-4xl mx-auto aspect-video bg-zinc-900 rounded-3xl overflow-hidden border border-red-600/30 shadow-[0_0_60px_rgba(220,38,38,0.15)]">
-                <iframe class="w-full h-full" src="https://www.youtube.com/embed/ZzJjxT-vb3Q" title="Kymi Drummer - Blues Express 2025" frameborder="0" allowfullscreen></iframe>
+                <iframe class="w-full h-full" src="https://www.youtube.com/embed/ZzJjxT-vb3Q" title="Kymi Drummer - Blues Express 2025" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <p class="mt-6 text-zinc-500 uppercase tracking-[0.3em] text-[10px] font-bold">Blues Express 2025 | Live Snippet</p>
         </div>
@@ -65,8 +70,8 @@
             
             <div class="grid grid-cols-1 md:grid-cols-2 gap-10">
                 <div class="p-10 border border-white/5 rounded-3xl bg-black/40 hover:border-red-600/30 transition duration-500 shadow-xl">
-                    <h3 class="text-red-600 text-2xl font-bold uppercase mb-6 tracking-widest border-b border-red-600/20 pb-2 italic">Drum Kit & Hardware</h3>
-                    <p class="text-white font-black text-xl mb-4 uppercase italic leading-tight">Mapex Mars Pro Kit</p>
+                    <h3 class="text-red-600 text-2xl font-bold uppercase mb-6 tracking-widest border-b border-red-600/20 pb-2 italic text-center md:text-left">Drum Kit & Hardware</h3>
+                    <p class="text-white font-black text-xl mb-4 uppercase italic leading-tight text-center md:text-left">Mapex Mars Pro Kit</p>
                     <ul class="text-zinc-400 text-sm space-y-3 uppercase font-medium tracking-wide">
                         <li>• Snare: <span class="text-white">14" x 6.5 Sonor 4000 White Edition Pro</span></li>
                         <li>• Toms: <span class="text-white">10" / 12" / 16"</span></li>
@@ -76,7 +81,7 @@
                 </div>
 
                 <div class="p-10 border border-white/5 rounded-3xl bg-black/40 hover:border-red-600/30 transition duration-500 shadow-xl">
-                    <h3 class="text-red-600 text-2xl font-bold uppercase mb-6 tracking-widest border-b border-red-600/20 pb-2 italic">Cymbals Set</h3>
+                    <h3 class="text-red-600 text-2xl font-bold uppercase mb-6 tracking-widest border-b border-red-600/20 pb-2 italic text-center md:text-left">Cymbals Set</h3>
                     <ul class="text-zinc-400 text-sm space-y-3 uppercase font-medium tracking-wide">
                         <li>• Hi-Hat 14": <span class="text-white">Sabian AA Rock</span></li>
                         <li>• 2x Crash 16": <span class="text-white">Zildjian A Custom</span></li>
