--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
         </div>
 
-        <div class="absolute inset-0 z-0">
+        <div class="absolute inset-0 z-0 text-center">
             <div class="absolute inset-0 bg-gradient-to-b from-black via-black/40 to-black z-10"></div>
             <div class="w-full h-full bg-zinc-900 opacity-20"></div>
         </div>
@@ -40,10 +40,10 @@
         <div class="max-w-4xl mx-auto px-6 text-center">
             <p class="text-zinc-500 uppercase tracking-widest text-[10px] font-bold mb-8 italic">Currently Drummer for</p>
             <div class="flex flex-col md:flex-row items-center justify-center gap-10">
-                <div class="flex flex-col items-center gap-4">
+                <div class="flex flex-col items-center gap-6">
                     <img src="logo.png" alt="Rock Slaves Logo" class="h-24 md:h-32 opacity-90 hover:opacity-100 transition duration-300">
-                    <a href="https://mmamsn-bit.github.io/rock-slaves-site/#video" target="_blank" class="text-[10px] bg-white/10 hover:bg-white/20 text-white py-2 px-4 rounded-full uppercase tracking-widest transition border border-white/20">
-                        Voir les vidéos du groupe
+                    <a href="https://mmamsn-bit.github.io/rock-slaves-site/" target="_blank" class="text-[10px] bg-red-600/10 hover:bg-red-600 text-white py-3 px-6 rounded-full uppercase tracking-widest transition duration-300 border border-red-600/50 font-bold">
+                        Accéder au site & vidéos du groupe
                     </a>
                 </div>
                 <div class="text-left">
@@ -58,20 +58,19 @@
         <div class="max-w-6xl mx-auto px-6 text-center">
             <h2 class="text-4xl font-black uppercase italic mb-12 tracking-tight text-neon">Latest <span class="text-red-600">Drum Cam</span></h2>
             <div class="max-w-4xl mx-auto aspect-video bg-zinc-900 rounded-3xl overflow-hidden border border-red-600/30 shadow-[0_0_60px_rgba(220,38,38,0.15)]">
-                <iframe class="w-full h-full" src="https://www.youtube.com/embed/ZzJjxT-vb3Q" title="Kymi Drummer - Blues Express 2025" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="w-full h-full" src="https://www.youtube.com/embed/ZzJjxT-vb3Q" title="Kymi Drummer - Blues Express 2025" frameborder="0" allowfullscreen></iframe>
             </div>
-            <p class="mt-6 text-zinc-500 uppercase tracking-[0.3em] text-[10px] font-bold">Blues Express 2025 | Live Snippet</p>
         </div>
     </section>
 
-    <section class="py-24 bg-zinc-900 relative z-20">
+    <section class="py-24 bg-zinc-900 relative z-20 text-center md:text-left">
         <div class="max-w-6xl mx-auto px-6">
             <h2 class="text-5xl font-black uppercase italic mb-16 text-center tracking-tight text-white">The <span class="text-red-600">Gear</span></h2>
             
             <div class="grid grid-cols-1 md:grid-cols-2 gap-10">
                 <div class="p-10 border border-white/5 rounded-3xl bg-black/40 hover:border-red-600/30 transition duration-500 shadow-xl">
-                    <h3 class="text-red-600 text-2xl font-bold uppercase mb-6 tracking-widest border-b border-red-600/20 pb-2 italic text-center md:text-left">Drum Kit & Hardware</h3>
-                    <p class="text-white font-black text-xl mb-4 uppercase italic leading-tight text-center md:text-left">Mapex Mars Pro Kit</p>
+                    <h3 class="text-red-600 text-2xl font-bold uppercase mb-6 tracking-widest border-b border-red-600/20 pb-2 italic">Drum Kit & Hardware</h3>
+                    <p class="text-white font-black text-xl mb-4 uppercase italic">Mapex Mars Pro Kit</p>
                     <ul class="text-zinc-400 text-sm space-y-3 uppercase font-medium tracking-wide">
                         <li>• Snare: <span class="text-white">14" x 6.5 Sonor 4000 White Edition Pro</span></li>
                         <li>• Toms: <span class="text-white">10" / 12" / 16"</span></li>
@@ -103,13 +102,12 @@
                 <div class="flex flex-wrap justify-center gap-6 text-[9px] uppercase tracking-widest text-zinc-600 font-black">
                     <p>Performance</p>
                     <span class="text-red-600">•</span>
-                    <p>Session Musician</p>
+                    <p>Session</p>
                     <span class="text-red-600">•</span>
                     <p>Production</p>
                 </div>
                 <p class="text-zinc-700 text-[9px] uppercase tracking-[0.4em] pt-8 italic leading-relaxed">
-                    Booking & Inquiries: <br class="md:hidden">
-                    <span class="text-zinc-400">liquidten8072403@gmail.com</span>
+                    Booking: <span class="text-zinc-400">liquidten8072403@gmail.com</span>
                 </p>
             </div>
         </div>
