--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <h2 class="text-4xl font-black uppercase italic mb-12 tracking-tight text-center">The <span class="text-red-600">Gallery</span></h2>
             <div class="grid grid-cols-2 md:grid-cols-5 gap-4">
                 <div class="overflow-hidden rounded-lg border border-white/10 bg-zinc-900">
-                    <img src="kymi1.jpg" alt="Kymi 1" class="zoom-img w-full h-48 object-cover">
+                    <img src="kymi1.jpeg" alt="Kymi 1" class="zoom-img w-full h-48 object-cover">
                 </div>
                 <div class="overflow-hidden rounded-lg border border-white/10 bg-zinc-900">
                     <img src="kymi2.jpg" alt="Kymi 2" class="zoom-img w-full h-48 object-cover">
@@ -57,7 +57,7 @@
                     <img src="kymi4.jpg" alt="Kymi 4" class="zoom-img w-full h-48 object-cover">
                 </div>
                 <div class="overflow-hidden rounded-lg border border-white/10 bg-zinc-900">
-                    <img src="kymi5.jpg" alt="Kymi 5" class="zoom-img w-full h-48 object-cover">
+                    <img src="kymi5.jpeg" alt="Kymi 5" class="zoom-img w-full h-48 object-cover">
                 </div>
                 <div class="overflow-hidden rounded-lg border border-white/10 bg-zinc-900">
                     <img src="kymi6.jpg" alt="Kymi 6" class="zoom-img w-full h-48 object-cover">
@@ -66,10 +66,10 @@
                     <img src="kymi7.jpg" alt="Kymi 7" class="zoom-img w-full h-48 object-cover">
                 </div>
                 <div class="overflow-hidden rounded-lg border border-white/10 bg-zinc-900">
-                    <img src="kymi8.jpg" alt="Kymi 8" class="zoom-img w-full h-48 object-cover">
+                    <img src="kymi8.jpeg" alt="Kymi 8" class="zoom-img w-full h-48 object-cover">
                 </div>
                 <div class="overflow-hidden rounded-lg border border-white/10 bg-zinc-900">
-                    <img src="kymi9.jpg" alt="Kymi 9" class="zoom-img w-full h-48 object-cover">
+                    <img src="kymi9.jpeg" alt="Kymi 9" class="zoom-img w-full h-48 object-cover">
                 </div>
                 <div class="overflow-hidden rounded-lg border border-white/10 bg-zinc-900">
                     <img src="kymi10.jpg" alt="Kymi 10" class="zoom-img w-full h-48 object-cover">
