--- a/index.html
+++ b/index.html
@@ -105,3 +105,37 @@
 
                 <div class="p-10 border border-white/5 rounded-3xl bg-black/40 hover:border-red-600/30 transition duration-500 shadow-xl">
                     <h3 class="text-red-600 text-2xl font-bold uppercase mb-6 tracking-widest border-b border-red-600/20 pb-2 italic text-center md:text-left">Cymbals Set</h3>
+                    <ul class="text-zinc-400 text-sm space-y-3 uppercase font-medium tracking-wide">
+                        <li>• Hi-Hat 14": <span class="text-white">Sabian AA Rock</span></li>
+                        <li>• 2x Crash 16": <span class="text-white">Zildjian A Custom</span></li>
+                        <li>• Ride 22": <span class="text-white">Sabian AA</span></li>
+                        <li>• China 18": <span class="text-white">Sabian AA</span></li>
+                        <li>• Splash 12": <span class="text-white">Zildjian A Custom</span></li>
+                        <li>• Splash 10": <span class="text-white">Sabian AA</span></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="py-24 text-center bg-black border-t border-zinc-900 relative z-20 w-full">
+        <div class="max-w-4xl mx-auto px-4">
+            <img src="kymi.png" class="h-24 mx-auto opacity-50 mb-8" alt="Kymi Logo">
+            <div class="space-y-4 text-center">
+                <p class="text-zinc-500 text-[10px] uppercase tracking-[0.6em] font-bold italic">© 2026 KYMIDRUMSPROD | KYMI DRUMMER</p>
+                <div class="flex flex-wrap justify-center gap-6 text-[9px] uppercase tracking-widest text-zinc-600 font-black">
+                    <p>Performance</p>
+                    <span class="text-red-600">•</span>
+                    <p>Session</p>
+                    <span class="text-red-600">•</span>
+                    <p>Production</p>
+                </div>
+                <p class="text-zinc-700 text-[9px] uppercase tracking-[0.4em] pt-8 italic leading-relaxed">
+                    Booking: <span class="text-zinc-400">liquidten8072403@gmail.com</span>
+                </p>
+            </div>
+        </div>
+    </footer>
+
+</body>
+</html>
