--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
         }
         
         .img-container:hover .zoom-img { 
-            transform: scale(1.8); /* Zoom encore plus gros (180%) */
+            transform: scale(1.8); 
             box-shadow: 0 25px 50px rgba(0,0,0,0.9);
             filter: grayscale(0%);
-            border: 2px solid rgba(220, 38, 38, 0.5); /* Bordure rouge au survol */
+            border: 2px solid rgba(220, 38, 38, 0.5); 
         }
     </style>
 </head>
@@ -83,6 +83,42 @@
             <h2 class="text-4xl font-black uppercase italic mb-12 tracking-tight text-neon">Latest <span class="text-red-600">Drum Cam</span></h2>
             <div class="max-w-4xl mx-auto aspect-video bg-zinc-900 rounded-3xl overflow-hidden border border-red-600/30 shadow-[0_0_60px_rgba(220,38,38,0.15)]">
                 <iframe class="w-full h-full" src="https://www.youtube.com/embed/ZzJjxT-vb3Q" title="Kymi Drummer - Blues Express 2025" frameborder="0" allowfullscreen></iframe>
+            </div>
+        </div>
+    </section>
+
+    <section class="py-24 bg-black relative z-20">
+        <div class="max-w-6xl mx-auto px-6 text-center">
+            <h2 class="text-3xl font-black uppercase italic mb-16 tracking-tight">Archive & <span class="text-red-600">Collaborations</span></h2>
+            
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+                <div class="space-y-4">
+                    <div class="aspect-video bg-zinc-900 rounded-xl overflow-hidden border border-white/10 hover:border-red-600/50 transition duration-300">
+                        <iframe class="w-full h-full" src="https://www.youtube.com/embed/Cv3jG8KKtYE" title="Kymi on Epica" frameborder="0" allowfullscreen></iframe>
+                    </div>
+                    <p class="text-zinc-400 uppercase text-xs font-bold tracking-widest">Kymi on Epica</p>
+                </div>
+
+                <div class="space-y-4">
+                    <div class="aspect-video bg-zinc-900 rounded-xl overflow-hidden border border-white/10 hover:border-red-600/50 transition duration-300">
+                        <iframe class="w-full h-full" src="https://www.youtube.com/embed/fB2Fgq6d5EI" title="Octavion - Paulette-Nancy" frameborder="0" allowfullscreen></iframe>
+                    </div>
+                    <p class="text-zinc-400 uppercase text-xs font-bold tracking-widest">Octavion - 2006</p>
+                </div>
+
+                <div class="space-y-4">
+                    <div class="aspect-video bg-zinc-900 rounded-xl overflow-hidden border border-white/10 hover:border-red-600/50 transition duration-300">
+                        <iframe class="w-full h-full" src="https://www.youtube.com/embed/OGFsr4tJrmM" title="Darkimya official" frameborder="0" allowfullscreen></iframe>
+                    </div>
+                    <p class="text-zinc-400 uppercase text-xs font-bold tracking-widest">With Darkimya - Glance of Madness</p>
+                </div>
+
+                <div class="space-y-4">
+                    <div class="aspect-video bg-zinc-900 rounded-xl overflow-hidden border border-white/10 hover:border-red-600/50 transition duration-300">
+                        <iframe class="w-full h-full" src="https://www.youtube.com/embed/AyfAgZvaYlE" title="Arianrod training" frameborder="0" allowfullscreen></iframe>
+                    </div>
+                    <p class="text-zinc-400 uppercase text-xs font-bold tracking-widest">With Arianrod - Training Road 2012</p>
+                </div>
             </div>
         </div>
     </section>
