--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
                     <a href="https://www.metal-archives.com/artists/Mike_Masson/424400" target="_blank" class="px-6 py-3 bg-zinc-800 hover:bg-red-600 text-[10px] font-bold uppercase tracking-widest rounded-lg transition duration-300">Mike Masson Profile</a>
                     <a href="https://www.metal-archives.com/albums/Slipstream/Loaded/874012" target="_blank" class="px-6 py-3 bg-zinc-800 hover:bg-red-600 text-[10px] font-bold uppercase tracking-widest rounded-lg transition duration-300">Slipstream - Loaded</a>
                     <a href="https://www.metal-archives.com/bands/Cyril_Lepizzera_Group_Arianrod/3540276523" target="_blank" class="px-6 py-3 bg-zinc-800 hover:bg-red-600 text-[10px] font-bold uppercase tracking-widest rounded-lg transition duration-300">Arianrod Group</a>
+                    <a href="https://www.spirit-of-metal.com/fr/band/Octavion" target="_blank" class="px-6 py-3 bg-zinc-800 hover:bg-red-600 text-[10px] font-bold uppercase tracking-widest rounded-lg transition duration-300">Octavion</a>
                 </div>
             </div>
         </div>
